kotlin-ide/idea/testData/multiplatform/differentKindsOfDependencies/b-common/b.kt
expect class <!NO_ACTUAL_FOR_EXPECT("class 'B'", "b-common", "")!>B<!>